--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -17,7 +17,8 @@
     <!-- Datatables -->
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/dataTables.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/buttons.bootstrap.min.css}">
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/fixedHeader.bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all"
+          th:href="@{/static/css/datatables/fixedHeader.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/responsive.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/scroller.bootstrap.min.css}">
     <!-- Custom Theme Style -->
@@ -52,12 +53,12 @@
                     </div>
                 </div>
             </div>
-        <div class="clearfix"></div>
+            <div class="clearfix"></div>
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="x_panel">
                         <div class="x_title">
-                            <button type="button" class="btn btn-info btn-sm"><i class="fa fa-plus"></i> 新增</button>
+                            <button type="button" class="btn btn-success btn-sm"><i class="fa fa-plus"></i> 新增</button>
                             <ul class="nav navbar-right panel_toolbox">
                                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
                             </ul>
@@ -81,7 +82,7 @@
                                     </thead>
                                     <tbody>
                                     <tr th:each="user,iterStat:${users}">
-                                        <td th:text="${iterStat.count}"></td>
+                                        <td th:text="${(iterStat.count)+(pageInfo.prePage)*(pageInfo.pageSize)}"></td>
                                         <td th:text="${user.username}"></td>
                                         <td th:text="${user.email}"></td>
                                         <td th:text="${user.gender == 'male'}? '男' : '女'"></td>
@@ -90,12 +91,16 @@
                                         <td th:text="${user.role.name}"></td>
                                         <td th:text="${user.createTime}"></td>
                                         <td>
-                                            <a type="button" class="btn btn-success btn-xs" th:href="@{/user/toUpdateUser.do(id=${user.id})}"><i class="fa fa-edit"></i></a>
-                                            <button type="button" class="btn btn-dark btn-xs"><i class="fa fa-trash"></i></button>
+                                            <a type="button" class="btn btn-success btn-xs"
+                                               th:href="@{/user/toUpdateUser.do(id=${user.id})}"><i
+                                                    class="fa fa-edit"></i></a>
+                                            <button type="button" class="btn btn-dark btn-xs"><i
+                                                    class="fa fa-trash"></i></button>
                                         </td>
                                     </tr>
                                     </tbody>
                                 </table>
+                                <div th:replace="/common/page::page(pageInfo = ${pageInfo})"></div>
                             </div>
                         </div>
                     </div>
@@ -121,12 +126,15 @@
 <!-- Custom Theme Scripts -->
 <script type="text/javascript" th:src="@{/static/js/common/custom.min.js}"></script>
 <script type="text/javascript" th:inline="javascript">
-    function formatValue(value) {
-        if(value) {
-            console.log("不空")
-        }else{
-            console.log("空");
-        }
+    $(function () {
+        $("#userId").DataTable()
+        console.log("大圣归来")
+    });
+    /*<![CDATA[*/
+    var BASE = /*[[@{/}]]*/'';
+    /*]]>*/
+    function changePage(pageIndex) {
+        window.location.href = BASE + "user/index.do?pageIndex=" + pageIndex;
     }
 </script>
 </body>
