--- a/src/main/webapp/WEB-INF/templates/user/index.html
+++ b/src/main/webapp/WEB-INF/templates/user/index.html
@@ -14,10 +14,13 @@
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/font-awesome.min.css}">
     <!-- NProgress -->
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/nprogress.css}">
+    <!--iCheck -->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/green.css}">
     <!-- Datatables -->
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/dataTables.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/buttons.bootstrap.min.css}">
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/fixedHeader.bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all"
+          th:href="@{/static/css/datatables/fixedHeader.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/responsive.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/scroller.bootstrap.min.css}">
     <!-- Custom Theme Style -->
@@ -67,39 +70,19 @@
                             <div class="table-responsive">
                                 <table id="userTable" class="table table-striped table-bordered">
                                     <thead>
-                                    <tr>
-                                        <!--<th>序号</th>-->
-                                        <th>用户名</th>
-                                        <th>邮箱</th>
-                                        <th>性别</th>
-                                        <th>电话</th>
-                                        <th>部门</th>
-                                        <th>角色</th>
-                                        <th>创建时间</th>
-                                        <th>操作</th>
-                                    </tr>
+                                        <tr>
+                                            <th><label><input type="checkbox" class="flat"></label></th>
+                                            <th>用户名</th>
+                                            <th>邮箱</th>
+                                            <th>性别</th>
+                                            <th>电话</th>
+                                            <th>部门</th>
+                                            <th>角色</th>
+                                            <th>创建时间</th>
+                                            <th>操作</th>
+                                        </tr>
                                     </thead>
-                                    <!--<tbody>
-                                    <tr th:each="user,iterStat:${users}">
-                                        <td th:text="${(iterStat.count)+(pageInfo.prePage)*(pageInfo.pageSize)}"></td>
-                                        <td th:text="${user.username}"></td>
-                                        <td th:text="${user.email}"></td>
-                                        <td th:text="${user.gender == 'male'}? '男' : '女'"></td>
-                                        <td th:text="${user.telephone}"></td>
-                                        <td th:text="${user.dept.name}"></td>
-                                        <td th:text="${user.role.name}"></td>
-                                        <td th:text="${user.createTime}"></td>
-                                        <td>
-                                            <a type="button" class="btn btn-success btn-xs"
-                                               th:href="@{/user/toUpdateUser.do(id=${user.id})}"><i
-                                                    class="fa fa-edit"></i></a>
-                                            <button type="button" class="btn btn-dark btn-xs"><i class="fa fa-trash"></i></button>
-
-                                        </td>
-                                    </tr>
-                                    </tbody>-->
                                 </table>
-                                <!--<div th:replace="/common/page::page(pageInfo = ${pageInfo})"></div>-->
                             </div>
                         </div>
                     </div>
@@ -126,6 +109,8 @@
 <script type="text/javascript" th:src="@{/static/js/datatables/jquery.dataTables.min.js}"></script>
 
 <script type="text/javascript" th:src="@{/static/js/datatables/dataTables.buttons.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/icheck.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/ellipses.js}"></script>
 <!--添加读取json体的handlebars模板引擎-->
 <script type="text/javascript" th:src="@{/static/js/common/handlebars-v4.2.0.js}"></script>
 <!-- Custom Theme Scripts -->
@@ -133,7 +118,8 @@
 <!--使用handlebars创建模板-->
 <script type="text/template" id="operateRow">
     {{#each func}}
-    <button type="button" class="btn btn-{{this.type}} btn-xs" onclick="{{this.fn}}"><i class="fa fa-{{icon}}"></i></button>
+    <button type="button" class="btn btn-{{this.type}} btn-xs" onclick="{{this.fn}}"><i class="fa fa-{{icon}}"></i>
+    </button>
     {{/each}}
 </script>
 
@@ -145,29 +131,126 @@
         var operateRow = $("#operateRow").html();
         //预编译模板
         var template = Handlebars.compile(operateRow);
-        var table = $('#userTable').DataTable( {
-            ajax: BASE + "user/list.do",
-            columns: [
-                { "data": "username" },
-                { "data": "email" },
-                { "data": "gender" },
-                { "data": "telephone" },
-                { "data": "dept.name" },
-                { "data": "role.name" },
-                { "data": "createTime" }
-            ],
-            language: {
+        var table = $('#userTable').DataTable({
+            "processing": true, //刷新的对话框
+            "paging": true, //开启分页
+            "lengthMenu": [ [10, 20, 30],['10','20','30'] ],//自定义分页长度
+            "order": [ [5, "desc"] ],
+            "searching": false,
+            "serverSide": true,
+            "ajax":function(data,callback,settings) {
+                //参数封装
+                var param = {};
+                //删除多余请求参数
+                for (var key in data) {
+                    if (key.indexOf("search") == 0) { //以columns开头的参数删除
+                        delete data[key];
+                    }
+                };
+                param.draw = data.draw;
+                param.limit = data.length;//页面显示记录条数，在页面显示每页显示多少项的时候
+                param.start = data.start;//开始的记录序号
+                //多排序条件
+                param.order = ",";
+                if(data.order) {
+                    $.each(data.order,function(index,value){
+                        var col = data.order[index].column;
+                        $.each(data.columns,function(i,v) {
+                            var name = data.columns[i].name;
+                            if(name) {
+                                if(col ==  window.parseInt(i)) {
+                                    var arr = name.split("_");
+                                    param.order += arr[1] + "," + data.order[index].dir + ",";
+                                }
+                            }
+                        })
+                    })
+                }
+                param.order= param.order.substring(0,param.order.length-1);
+                $.ajax({
+                    url: BASE + "user/list.do",
+                    cache:false,
+                    data: param,
+                    dataType: "json",
+                    success:function(result){
+                        var returnData = {};
+                        returnData.draw = result.draw;
+                        returnData.recordsTotal = result.total;//返回数据全部记录
+                        returnData.recordsFiltered = result.total;//后台不实现过滤功能，每次查询均视作全部结果
+                        returnData.data = result.users;//返回的数据列表
+                        //回调函数(数据渲染)
+                        callback(returnData);
+                    },
+                });
+            },
+            "language": {
                 "url": BASE + "/static/js/datatables/Chinese.json"
             },
-            columnDefs: [
+            "columnDefs": [
                 {
-                    targets: 7,
-                    render: function (a, b, c, d) {
+                    "width":"20px",
+                    "data":null,
+                    "targets":[0],
+                    "orderable":false,
+                    "render": function(data, type, row, meta) {
+                        return '<label><input type="checkbox" class="flat" value="' + row.id + '" />';
+                    },
+                },
+               {
+                    "name":"1_username",
+                    "data":"username",
+                    "targets":[1],
+                    "orderable":false
+                },
+                {
+                   "name":"2_email",
+                   "data":"email",
+                   "targets":[2],
+                   "orderable":false
+               },
+                {
+                    "name":"2_gender",
+                    "data":"gender",
+                    "targets":[3],
+                    "render":function(data) {
+                        return data == 'male' ? "男":"女";
+                    }
+                },
+                {
+                    "name":"4_telephone",
+                    "data":"telephone",
+                    "targets":[4],
+                    "orderable":false
+
+                },
+                {
+                    "name":"5_deptName",
+                    "data":"dept.name",
+                    "targets":[5]
+                },
+                {
+                    "name":"6_roleName",
+                    "data":"role.name",
+                    "targets":[6],
+                    "orderable":false
+
+                },
+                {
+                    "name":"6_createTime",
+                    "data":"createTime",
+                    "targets":[7],
+                    "orderable":false
+
+                },
+                {
+                    "targets": [8],
+                    "orderable":false,
+                    render: function (data, type, row, meta) {
                         var context =
                             {
                                 func: [
-                                    {"icon": "edit", "fn": "editUser(\'" + c.id + "\')", "type": "success"},
-                                    {"icon": "trash", "fn": "delUser(\'" + c.id + "\')", "type": "dark"}
+                                    {"icon": "edit", "fn": "editUser(\'" + row.id + "\')", "type": "success"},
+                                    {"icon": "trash", "fn": "delUser(\'" + row.id + "\')", "type": "dark"}
                                 ]
                             };
                         var html = template(context);
@@ -175,13 +258,11 @@
                     }
                 }
 
-            ]
-        } );
+            ],
+            /*sPaginationType: 'ellipses'*/
+        });
     });
 
-    function changePage(pageIndex) {
-        window.location.href = BASE + "user/index.do?pageIndex=" + pageIndex;
-    }
 
     function editUser(id) {
         console.log("editButton" + id);
